Switching from Sqlite to Postgres

--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 django-ckeditor = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.9.7"
